--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "prepare": "husky install"
     },
     "lint-staged": {
-        "*.{js,ts,vue}": "eslint --ext .ts,.vue,.js"
+        "*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.2.1",
