--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-    "name": "vue3-template",
-    "version": "0.0.0",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "run-p type-check build-only",
-        "preview": "vite preview",
-        "build-only": "vite build",
-        "type-check": "vue-tsc --noEmit",
-        "lint": "eslint --ext .ts,.vue,.js --ignore-path .gitignore .",
-        "prepare": "husky install"
-    },
-    "lint-staged": {
-        "*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "6.2.1",
-        "@fortawesome/free-brands-svg-icons": "6.2.1",
-        "@fortawesome/free-regular-svg-icons": "6.2.1",
-        "@fortawesome/free-solid-svg-icons": "6.2.1",
-        "@fortawesome/vue-fontawesome": "3.0.2",
-        "bootstrap": "5.2.3",
-        "pinia": "2.0.28",
-        "vue": "3.2.45",
-        "vue-router": "4.1.6"
-    },
-    "devDependencies": {
-        "@rushstack/eslint-patch": "1.2.0",
-        "@types/node": "18.11.12",
-        "@vitejs/plugin-vue": "3.2.0",
-        "@vue/eslint-config-prettier": "7.0.0",
-        "@vue/eslint-config-typescript": "11.0.2",
-        "@vue/tsconfig": "0.1.3",
-        "eslint": "8.29.0",
-        "eslint-plugin-vue": "9.8.0",
-        "husky": "8.0.2",
-        "lint-staged": "13.1.0",
-        "npm-run-all": "4.1.5",
-        "prettier": "2.8.1",
-        "typescript": "4.9.4",
-        "vite": "3.2.5",
-        "vue-tsc": "1.0.12"
-    }
+	"name": "vue3-template",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "run-p type-check build-only",
+		"preview": "vite preview",
+		"build-only": "vite build",
+		"type-check": "vue-tsc --noEmit",
+		"lint": "eslint --ext .ts,.vue,.js --ignore-path .gitignore .",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "6.2.1",
+		"pinia": "2.0.27",
+		"vue": "3.2.45",
+		"vue-router": "4.1.6"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "1.2.0",
+		"@tailwindcss/forms": "0.5.3",
+		"@types/node": "18.11.10",
+		"@vitejs/plugin-vue": "3.2.0",
+		"@vue/eslint-config-prettier": "7.0.0",
+		"@vue/eslint-config-typescript": "11.0.2",
+		"@vue/tsconfig": "0.1.3",
+		"eslint": "8.28.0",
+		"eslint-plugin-vue": "9.8.0",
+		"husky": "8.0.2",
+		"lint-staged": "13.0.4",
+		"npm-run-all": "4.1.5",
+		"postcss": "^8.4.20",
+		"prettier": "2.8.0",
+		"tailwindcss": "3.2.4",
+		"typescript": "4.9.3",
+		"vite": "3.2.4",
+		"vue-tsc": "1.0.10"
+	}
 }
