--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@vue/eslint-config-prettier": "7.0.0",
 		"@vue/eslint-config-typescript": "11.0.2",
 		"@vue/tsconfig": "0.1.3",
+		"autoprefixer": "^10.4.13",
 		"eslint": "8.28.0",
 		"eslint-plugin-vue": "9.8.0",
 		"husky": "8.0.2",
