--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
 		"skipLibCheck": true,
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
+		"preserveValueImports": false,
+		"importsNotUsedAsValues": "remove",
+		"verbatimModuleSyntax": true
 	}
 }
