--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "run-p type-check build-only",
 		"preview": "vite preview",
 		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit",
+		"type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false ",
 		"lint": "eslint --ext .ts,.vue,.js --ignore-path .gitignore .",
 		"prepare": "husky install"
 	},
@@ -24,6 +24,7 @@
 	"devDependencies": {
 		"@rushstack/eslint-patch": "1.3.0",
 		"@tailwindcss/forms": "0.5.3",
+		"@tsconfig/node18": "2.0.1",
 		"@types/node": "18.16.14",
 		"@vitejs/plugin-vue": "4.2.3",
 		"@vue/eslint-config-prettier": "7.1.0",
