--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,11 @@
 {
-	"extends": "@vue/tsconfig/tsconfig.web.json",
-	"include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
-	"references": [{ "path": "./tsconfig.node.json" }],
-	"compilerOptions": {
-		"baseUrl": ".",
-		"target": "ESNext",
-		"useDefineForClassFields": true,
-		"module": "ESNext",
-		"moduleResolution": "Node",
-		"strict": true,
-		"jsx": "preserve",
-		"sourceMap": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"esModuleInterop": true,
-		"lib": ["ESNext", "DOM"],
-		"skipLibCheck": true,
-		"paths": {
-			"@/*": ["./src/*"]
-		},
-		"preserveValueImports": false,
-		"importsNotUsedAsValues": "remove",
-		"verbatimModuleSyntax": true
-	}
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
