--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"typescript": "5.1.6",
 		"vite": "4.4.2",
 		"vue-tsc": "1.8.4"
+	},
+	"overrides": {
+		"eslint-plugin-prettier": "5.0.0"
 	}
 }
