--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "run-p type-check build-only",
-		"preview": "vite preview",
+		"build": "run-s check build-only",
 		"build-only": "vite build",
-		"type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false ",
-		"lint": "eslint --ext .ts,.vue,.js --ignore-path .gitignore .",
-		"prepare": "husky install"
+		"check": "run-s type-check lint",
+		"lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
+		"lint:fix": "eslint --ext .ts,.vue,.js --fix .",
+		"prepare": "husky install",
+		"preview": "vite preview",
+		"test:unit": "vitest",
+		"type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false "
 	},
 	"lint-staged": {
 		"*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
@@ -41,6 +44,7 @@
 		"tailwindcss": "3.4.0",
 		"typescript": "5.3.3",
 		"vite": "5.0.10",
+		"vitest": "1.1.0",
 		"vue-tsc": "1.8.27"
 	}
 }
