Update linting setup
Signed-off-by: Leon de Klerk <developer@leondeklerk.com>

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
 	"$schema": "https://json.schemastore.org/prettierrc",
 	"printWidth": 150,
-	"endOfLine": "auto"
+	"endOfLine": "auto",
+	"trailingComma": "all",
+	"singleAttributePerLine": true
 }
