Example of building a library with multiple entries
Signed-off-by: Leon de Klerk <developer@leondeklerk.com>

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,9 @@
 		},
 		"preserveValueImports": false,
 		"importsNotUsedAsValues": "remove",
-		"verbatimModuleSyntax": true
+		"verbatimModuleSyntax": true,
+		"outDir": "dist",
+		"declaration": true,
+		"noEmit": false,
 	}
 }
