--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
-	"name": "vue3-template",
-	"version": "0.0.0",
+	"name": "leon-library",
+	"version": "0.0.1",
 	"private": true,
 	"type": "module",
+	"exports": {
+		".": {
+			"import": "./dist/main.js",
+			"types": "./dist/types/main.d.ts"
+		},
+		"./views": {
+			"import": "./dist/views/views.js",
+			"types": "./dist/types/views/views.d.ts"
+		},
+		"./stores": {
+			"import": "./dist/stores/stores.js",
+			"types": "./dist/types/stores/stores.d.ts"
+		},
+		"./components": {
+			"import": "./dist/components/components.js",
+			"types": "./dist/types/components/components.d.ts"
+		}
+	},
+	"files": ["dist"],
 	"scripts": {
 		"dev": "vite",
 		"build": "run-s check build-only",
-		"build-only": "vite build",
+		"build-only": "vite build && vue-tsc --emitDeclarationOnly -p tsconfig.app.json && move dist/src dist/types",
 		"check": "run-s type-check lint",
 		"lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
 		"lint:fix": "eslint --ext .ts,.vue,.js --fix .",
@@ -17,6 +36,11 @@
 	},
 	"lint-staged": {
 		"*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
+	},
+	"peerDependencies": {
+		"pinia": "2.1.7",
+		"vue": "3.4.21",
+		"vue-router": "4.3.0"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "6.5.1",
@@ -44,6 +68,7 @@
 		"tailwindcss": "3.4.1",
 		"typescript": "5.4.2",
 		"vite": "5.2.0",
+		"vite-plugin-dts": "^3.8.1",
 		"vitest": "1.4.0",
 		"vue-tsc": "2.0.7"
 	}
