--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -13,9 +13,7 @@ jobs:
   
     steps:
     - uses: actions/checkout@v4.1.1
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '18.x'
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run build
+    - uses: oven-sh/setup-bun@v1
+    - run: bun install
+    - run: bun run lint
+    - run: bun run build
