--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-	"name": "vue3-template",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "run-s check build-only",
-		"build-only": "vite build",
-		"check": "run-s type-check lint",
-		"lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
-		"lint:fix": "eslint --ext .ts,.vue,.js --fix .",
-		"prepare": "husky",
-		"preview": "vite preview",
-		"test:unit": "vitest",
-		"type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false "
-	},
-	"lint-staged": {
-		"*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
-	},
-	"dependencies": {
-		"@fortawesome/fontawesome-free": "6.5.1",
-		"pinia": "2.1.7",
-		"vue": "3.4.21",
-		"vue-router": "4.3.0"
-	},
-	"devDependencies": {
-		"@rushstack/eslint-patch": "1.10.1",
-		"@tailwindcss/forms": "0.5.7",
-		"@tsconfig/node20": "20.1.4",
-		"@types/node": "20.11.30",
-		"@vitejs/plugin-vue": "5.0.4",
-		"@vue/eslint-config-prettier": "9.0.0",
-		"@vue/eslint-config-typescript": "13.0.0",
-		"@vue/tsconfig": "0.5.1",
-		"autoprefixer": "10.4.19",
-		"eslint": "8.57.0",
-		"eslint-plugin-vue": "9.24.0",
-		"husky": "9.0.11",
-		"lint-staged": "15.2.2",
-		"npm-run-all2": "6.1.2",
-		"postcss": "8.4.38",
-		"prettier": "3.2.5",
-		"tailwindcss": "3.4.3",
-		"typescript": "5.4.3",
-		"vite": "5.2.7",
-		"vitest": "1.4.0",
-		"vue-tsc": "2.0.7"
-	}
+  "name": "vue3-template",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "bunx --bun vite",
+    "build": "bun run check && bun run build-only",
+    "build-only": "bunx --bun vite build",
+    "check": "bun run type-check && bun run lint",
+    "lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
+    "lint:fix": "eslint --ext .ts,.vue,.js --fix .",
+    "prepare": "husky",
+    "preview": "bunx --bun vite preview",
+    "test:unit": "bunx --bun vitest",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false "
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "6.5.1",
+    "pinia": "2.1.7",
+    "vue": "3.4.21",
+    "vue-router": "4.3.0"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "1.10.1",
+    "@tailwindcss/forms": "0.5.7",
+    "@tsconfig/node20": "20.1.4",
+    "@types/bun": "^1.0.12",
+    "@types/node": "20.11.30",
+    "@vitejs/plugin-vue": "5.0.4",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "@vue/eslint-config-typescript": "13.0.0",
+    "@vue/tsconfig": "0.5.1",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-plugin-vue": "9.24.0",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "npm-run-all2": "6.1.2",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.3",
+    "vite": "5.2.7",
+    "vitest": "1.4.0",
+    "vue-tsc": "2.0.7"
+  }
 }
