--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -16,4 +16,5 @@ jobs:
     - uses: oven-sh/setup-bun@v1
     - run: bun install
     - run: bun run lint
+    - run: build run type-check
     - run: bun run build
