--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "bunx --bun vite",
-    "build": "bun run check && bun run build-only",
+    "build": "bun run lint && bun run type-check && bun run build-only",
     "build-only": "bunx --bun vite build",
-    "check": "bun run type-check && bun run lint",
     "lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
     "lint:fix": "eslint --ext .ts,.vue,.js --fix .",
     "prepare": "husky",
@@ -29,7 +28,6 @@
     "@tailwindcss/forms": "0.5.7",
     "@tsconfig/node20": "20.1.4",
     "@types/bun": "^1.0.12",
-    "@types/node": "20.11.30",
     "@vitejs/plugin-vue": "5.0.4",
     "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "13.0.0",
@@ -39,7 +37,6 @@
     "eslint-plugin-vue": "9.24.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
-    "npm-run-all2": "6.1.2",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "tailwindcss": "3.4.3",
