feat: upgrade to latest build tools
Signed-off-by: Leon de Klerk <developer@leondeklerk.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
 	"recommendations": [
-	  "Vue.volar",
-	  "dbaeumer.vscode-eslint",
-	  "esbenp.prettier-vscode"
+		"Vue.volar",
+		"dbaeumer.vscode-eslint",
+		"esbenp.prettier-vscode",
+		"EditorConfig.EditorConfig",
 	]
-  }
-  
+}
