--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "vue3-template",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "bunx --bun vite",
-    "build": "bun run lint && bun run type-check && bun run build-only",
-    "build-only": "bunx --bun vite build",
-    "lint": "eslint --ext .ts,.vue,.js --max-warnings 0 .",
-    "lint:fix": "eslint --ext .ts,.vue,.js --fix .",
-    "prepare": "husky",
-    "preview": "bunx --bun vite preview",
-    "test:unit": "bunx --bun vitest",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false "
-  },
-  "lint-staged": {
-    "*.{js,ts,vue}": "eslint --ext .ts,.vue,.js --max-warnings 0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "6.7.0",
-    "pinia": "2.2.6",
-    "vue": "3.5.13",
-    "vue-router": "4.4.5"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "1.10.4",
-    "@tailwindcss/forms": "0.5.9",
-    "@tsconfig/node20": "20.1.4",
-    "@types/bun": "1.1.13",
-    "@vitejs/plugin-vue": "5.2.0",
-    "@vue/eslint-config-prettier": "9.0.0",
-    "@vue/eslint-config-typescript": "13.0.0",
-    "@vue/tsconfig": "0.6.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "8.57.1",
-    "eslint-plugin-vue": "9.31.0",
-    "husky": "9.1.7",
-    "lint-staged": "15.2.10",
-    "postcss": "8.4.49",
-    "prettier": "3.3.3",
-    "tailwindcss": "3.4.15",
-    "typescript": "5.6.3",
-    "vite": "5.4.11",
-    "vitest": "1.6.0",
-    "vue-tsc": "2.1.10"
-  }
+	"name": "vue3-template",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "bunx --bun vite",
+		"build": "bun run lint && bun run type-check && bun run build-only",
+		"build-only": "bunx --bun vite build",
+		"lint": "eslint --max-warnings 0 .",
+		"lint:fix": "eslint --fix .",
+		"prepare": "husky",
+		"preview": "bunx --bun vite preview",
+		"test:unit": "bunx --bun vitest",
+		"type-check": "vue-tsc --build --force"
+	},
+	"lint-staged": {
+		"*.{js,ts,vue}": "eslint --max-warnings 0"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "6.7.0",
+		"@types/jsdom": "^21.1.7",
+		"pinia": "2.2.6",
+		"vite-plugin-vue-devtools": "^7.6.4",
+		"vue": "3.5.13",
+		"vue-router": "4.4.5"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "1.10.4",
+		"@tailwindcss/forms": "0.5.9",
+		"@tsconfig/node22": "^22.0.0",
+		"@types/bun": "1.1.13",
+		"@vitejs/plugin-vue": "5.2.0",
+		"@vue/eslint-config-prettier": "^10.1.0",
+		"@vue/eslint-config-typescript": "^14.1.3",
+		"@vue/tsconfig": "0.6.0",
+		"autoprefixer": "10.4.20",
+		"eslint": "^9.15.0",
+		"eslint-plugin-vue": "^9.31.0",
+		"husky": "9.1.7",
+		"lint-staged": "15.2.10",
+		"postcss": "8.4.49",
+		"prettier": "3.3.3",
+		"tailwindcss": "3.4.15",
+		"typescript": "5.6.3",
+		"vite": "5.4.11",
+		"vitest": "^2.1.5",
+		"vue-tsc": "2.1.10"
+	}
 }
