--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,20 @@
 {
-	"extends": "@tsconfig/node20/tsconfig.json",
-	"include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "playwright.config.*"],
+	"extends": "@tsconfig/node22/tsconfig.json",
+	"include": [
+		"vite.config.*",
+		"vitest.config.*",
+		"cypress.config.*",
+		"nightwatch.conf.*",
+		"playwright.config.*"
+	],
 	"compilerOptions": {
 		"composite": true,
+		"noEmit": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"module": "ESNext",
-		"types": ["node"]
+		"moduleResolution": "Bundler",
+		"types": [
+			"node"
+		]
 	}
 }
