refactor: move back to npm
Signed-off-by: Leon de Klerk <developer@leondeklerk.com>

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "bunx --bun vite",
-		"build": "bun run lint && bun run type-check && bun run build-only",
-		"build-only": "bunx --bun vite build",
+		"dev": "vite",
+		"build": "npm run lint && npm run type-check && npm run build-only",
+		"build-only": "vite build",
 		"lint": "eslint --max-warnings 0 .",
 		"lint:fix": "eslint --fix .",
 		"prepare": "husky",
-		"preview": "bunx --bun vite preview",
-		"test:unit": "bunx --bun vitest",
+		"preview": "vite preview",
+		"test:unit": "vitest",
 		"type-check": "vue-tsc --build --force"
 	},
 	"lint-staged": {
@@ -19,8 +19,7 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "6.7.2",
-		"@types/jsdom": "21.1.7",
-		"pinia": "2.3.1",
+		"pinia": "3.0.1",
 		"vue": "3.5.13",
 		"vue-router": "4.5.0"
 	},
@@ -28,14 +27,15 @@
 		"@rushstack/eslint-patch": "1.10.5",
 		"@tailwindcss/forms": "0.5.10",
 		"@tsconfig/node22": "22.0.0",
-		"@types/bun": "1.2.4",
+		"@types/jsdom": "21.1.7",
+		"@types/node": "22.13.10",
 		"@vitejs/plugin-vue": "5.2.1",
 		"@vue/eslint-config-prettier": "10.2.0",
 		"@vue/eslint-config-typescript": "14.5.0",
 		"@vue/tsconfig": "0.7.0",
 		"autoprefixer": "10.4.21",
 		"eslint": "9.22.0",
-		"eslint-plugin-vue": "9.33.0",
+		"eslint-plugin-vue": "10.0.0",
 		"husky": "9.1.7",
 		"lint-staged": "15.4.3",
 		"postcss": "8.5.3",
