--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -10,11 +10,13 @@ jobs:
   lint-build:
 
     runs-on: ubuntu-latest
-  
+
     steps:
     - uses: actions/checkout@v4.2.2
-    - uses: oven-sh/setup-bun@v2
-    - run: bun install
-    - run: bun run lint
-    - run: bun run type-check
-    - run: bun run build
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '22.14.x'
+    - run: npm ci
+    - run: npm run lint
+    - run: npm run type-check
+    - run: npm run build
