--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@rushstack/eslint-patch": "1.10.5",
 		"@tailwindcss/forms": "0.5.10",
+		"@tailwindcss/vite": "4.0.12",
 		"@tsconfig/node22": "22.0.0",
 		"@types/jsdom": "21.1.7",
 		"@types/node": "22.13.10",
@@ -33,18 +34,16 @@
 		"@vue/eslint-config-prettier": "10.2.0",
 		"@vue/eslint-config-typescript": "14.5.0",
 		"@vue/tsconfig": "0.7.0",
-		"autoprefixer": "10.4.21",
 		"eslint": "9.22.0",
 		"eslint-plugin-vue": "10.0.0",
 		"husky": "9.1.7",
 		"lint-staged": "15.4.3",
-		"postcss": "8.5.3",
 		"prettier": "3.5.3",
-		"tailwindcss": "3.4.17",
+		"tailwindcss": "^4.0.12",
 		"typescript": "5.8.2",
 		"vite": "6.2.1",
 		"vite-plugin-vue-devtools": "7.7.2",
-		"vitest": "2.1.9",
+		"vitest": "3.0.8",
 		"vue-tsc": "2.2.8"
 	}
 }
