--- a/.github/workflows/lint-build.yml
+++ b/.github/workflows/lint-build.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: '22.14.x'
-    - run: npm ci
+    - run: npm i
     - run: npm run lint
     - run: npm run type-check
     - run: npm run build
