--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
 		"vue": "3.5.13",
 		"vue-router": "4.5.0"
 	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.35.0"
+	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "1.10.5",
 		"@tailwindcss/forms": "0.5.10",
