fix: add tailwindcss linux dependency
Signed-off-by: Leon de Klerk <developer@leondeklerk.com>

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"vue-router": "4.5.0"
 	},
 	"optionalDependencies": {
-		"@rollup/rollup-linux-x64-gnu": "4.35.0"
+		"@rollup/rollup-linux-x64-gnu": "4.35.0",
+		"@tailwindcss/oxide-linux-x64-gnu": "4.0.12"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "1.10.5",
