--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.35.0",
-		"@tailwindcss/oxide-linux-x64-gnu": "4.0.12"
+		"@tailwindcss/oxide-linux-x64-gnu": "4.0.12",
+		"lightningcss-linux-x64-gnu": "1.29.2"
 	},
 	"devDependencies": {
 		"@rushstack/eslint-patch": "1.10.5",
