--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"prepare": "husky",
 		"preview": "vite preview",
 		"test:unit": "vitest",
-		"type-check": "vue-tsc --build --force"
+		"type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
 	},
 	"lint-staged": {
 		"*.{js,ts,vue}": "eslint --max-warnings 0"
@@ -29,8 +29,6 @@
 		"lightningcss-linux-x64-gnu": "1.29.2"
 	},
 	"devDependencies": {
-		"@rushstack/eslint-patch": "1.10.5",
-		"@tailwindcss/forms": "0.5.10",
 		"@tailwindcss/vite": "4.0.12",
 		"@tsconfig/node22": "22.0.0",
 		"@types/jsdom": "21.1.7",
